RESOLVED FIXED276873
[Text Directionality] Setting `.value =` sometimes doesn't update dir=auto inputs
https://bugs.webkit.org/show_bug.cgi?id=276873
Summary [Text Directionality] Setting `.value =` sometimes doesn't update dir=auto in...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-21 20:26:59 PDT
Said Abou-Hallawa
Comment 2 2024-08-05 15:37:50 PDT
EWS
Comment 3 2024-08-05 23:11:01 PDT
Committed 281877@main (ef6cd5cc4e16): <https://commits.webkit.org/281877@main> Reviewed commits have been landed. Closing PR #31749 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.