[Text Directionality] Setting `.value =` sometimes doesn't update dir=auto inputs https://bugs.webkit.org/show_bug.cgi?id=276873 rdar://132214207

Reviewed by Tim Nguyen.

Like what we do when the `value` property of an <input> element changes, we need
to update the effective directionality when its `value` atttribute changes.

* LayoutTests/imported/w3c/web-platform-tests/html/dom/elements/global-attributes/dir-auto-form-associated.window-expected.txt:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/dom/elements/global-attributes/dir-auto-form-associated.window-expected.txt:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/html/dom/elements/global-attributes/dir-auto-form-associated.window-expected.txt:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::attributeChanged):

Canonical link: https://commits.webkit.org/281877@main